# cpp-starter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/cpp_starter/: adev.hpp
src/: adev.cpp
tests/: CMakeLists.txt  test_adev.cpp
